--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "gsap": "^3.13.0",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
     "three": "^0.181.0",
+    "typewriter-effect": "^2.22.0",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
